from ten thousand lighting bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>runling run</title>
 
-    <script src="p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
     <script src="functions.js"></script>
     <script src="styles.css"></script>
