--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <title>runling run</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.9/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.sound.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.js"></script>
     <script src="sketch.js"></script>
     <script src="functions.js"></script>
     <script src="styles.css"></script>
