cause everything is never as it seems

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.js"></script>
     <script src="sketch.js"></script>
     <script src="functions.js"></script>
-    <script src="styles.css"></script>
+    <script src="runling.js"></script>
+    <script src="drones.js"></script>
 </head>
 
 <body oncontextmenu="return false;">
