--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
     <script src="functions.js"></script>
     <script src="runling.js"></script>
     <script src="drones.js"></script>
+    <style>        
+        body {
+            text-align: center;
+            background-color: grey;
+        }
+    </style>
 </head>
 
 <body oncontextmenu="return false;">
+    
 </body>
 
 </html>
